# dictionary

./: .env.template  .gitignore  .travis.yml  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
docker/server/: Dockerfile
server/: __init__.py  routes.py  settings.py
server/apps/auth/: models.py  routes.py  views.py
server/apps/auth/github/: routes.py  views.py
server/apps/dictionary/: bl.py  models.py
server/apps/learn/: bl.py  forms.py  models.py  views.py
server/apps/main/: views.py
server/apps/translate/: client.py  models.py
server/apps/word/: bl.py  forms.py  models.py  views.py
server/db/: __init__.py
server/db/migrations/: env.py
server/db/migrations/versions/: 2020_02_04_4978d39b1966_add_users_words_and_answer_history_.py  2020_02_05_150086c7a3ba_add_users_words_and_answer_history.py  2020_02_08_2a0ed7f1deb4_add_users_words_and_answer_history.py  2020_02_09_3a447dee97a1_add_predicative_to_translates_part_of_.py
server/middleware/: __init__.py  auth.py
server/templates/: base.jinja2  index.jinja2  navbar.jinja2
server/templates/auth/: login_page.jinja2
server/templates/dictionary/: form.jinja2  list.jinja2
server/templates/learn/: index.jinja2  modal.jinja2
server/templates/word/: create.jinja2  delete.jinja2  detail.jinja2  edit.jinja2  form.jinja2
server/utils/: __init__.py  auth.py  response.py
server/utils/bl/: exception.py
server/utils/orm/: fields.py  models.py
server/utils/session/: __init__.py  exceptions.py
